# triff

./: Cargo.toml  README.md
scripts/: tree_diff  triff_report
src/: lib.rs  logging.rs  main.rs  settings.rs
src/cases/: compare.rs  file.rs  inode.rs  mod.rs  permissions.rs
src/entries/: base.rs  dir.rs  file.rs  mod.rs  nonregular.rs  symlink.rs
src/tests/: base.rs  dirs.rs  files.rs  mod.rs  nonregular.rs  symlinks.rs
src/tests/assets/test_00_base/c/: file3
